# xezim

./: .gitignore  Cargo.toml  FEATURES.md  README.md  build.rs  install_xezim_on_mac.sh  kitchen.sv  str3.sv
.cargo/: config.toml
.github/workflows/: ci.yml  fix-lint.yml  install-linux.yml  install-windows.yml  lint.yml
bench/: README.md  gen_designs.py  run_bench.sh  summarize.py
docs/: TRACING.md  c910_memcpy_investigation.md  dpi-guide.md  uvm-guide.md  uvm-run-phase-plan.md
dpi/spike/: Makefile  xezim_spike_dpi.cpp
examples/: c910_memory_analysis.txt  e902_part1_ibuf.v  e902_part2_ifctrl.v  e902_part3_iu_stall.v  e902_part6_decd_replay.v  e902_perf_comparison.txt  run_c910_hello.sh  run_e902_xxxyyy.sh
include/: uvm_dpi_xezim.cc  vpi_user.h
reports/: getting-verilator-started-with-uvm.md  sv-tests-compliance.md  svtests_index.html  svtests_report.csv
scripts/: Makefile  build_uvm_dpi.sh  install.ps1  install.sh  install_xezim_on_mac.sh  pgo-build.sh
src/: intra_delay.rs  lib.rs  main.rs  multikernel.rs  should_fail_lint.rs  vpi_printf_shim.c
src/compiler/: bytecode.rs  elaborate.rs  jit.rs  jit_llvm.rs  mod.rs  simulator.rs  value.rs
src/multikernel/: tests.rs
tests/: adaptive_edge_skip.rs  always_iff_guard.rs  always_level_delay.rs  array_element_collection.rs  array_locator_named_iterator.rs  array_of_collections.rs  array_of_module_instances.rs  array_of_queues.rs  array_parameter.rs  array_query_multidim_packed.rs  assign_pattern_aggregate.rs  assoc_compliance.rs  audit_sibling_fixes.rs  bind_directive_basic.rs  bind_in_module.rs  bind_upward_refs.rs  bit_class_property_signedness.rs  blocking_loop_break_continue.rs  blocking_task_call.rs  c910_create_en_full_path.rs  c910_scoped_cont_assign.rs  c910_settle_miri.rs  case_wait_in_task.rs  chained_member_access.rs  class_program_test.rs  class_scoped_enum.rs  class_value_params.rs  class_width_copy_fork.rs  clock_t0_variable_delay_phase.rs  clocking_event_cycle_delay.rs  compliance_tests.rs  conditional_real_x_select.rs  constraint_algebra_inherit.rs  constraint_array_sum.rs  constraint_foreach_and_casts.rs  constraint_funcs_aggregates.rs  constraint_randc_soft_local.rs  cont_assign_2d_array_index0.rs  copy_constructor_decl_init.rs  coverage_auto_bins.rs  (+138 more)
tests/dpi/: uvm_dpi_test.c  uvm_dpi_test.sv  vpi_backdoor_compliance.c  vpi_backdoor_compliance.sv  vpi_conformance.c  vpi_conformance.sv  vpi_object_model.c  vpi_object_model.sv  vpi_systf.c  vpi_systf.sv
tests/issue30/: 00_basic_cons_checks.sv  01_basic_cons_checks.sv  02_basic_cons_checks.sv  03_basic_array_rand.sv  04_sys_user_funcs_in_cons.sv  05_complex_class_struct_union_enum.sv  06_advanced_class_inherit_misc_rand.sv  07_advanced_qaarr_uniq_var_order.sv  08_cons_guard_soft_cons.sv  09_loc_scope_dyn_wt_inline_cons_chk.sv  10_std_randomize_checks.sv  11_rand_func_stability_srandom.sv  12_rand_func_stability_randstate.sv
tests/issue_cases/: constraint.foreach.sv  constraint.typecast.sv  data.to.string.fmt.sv  dyn.arr.of.mbox.sv  final.blocks.test.case.sv  fmt.specifiers.sv  mbox_in_interface.sv  string.compliance.tests.sv  timescale.handling.sv  type-parameter-compliance.sv
tests/lrm_audit/: ch10_assignments.sv  ch11_operators.sv  ch12_procedural.sv  ch13_subroutines.sv  ch15_18_20.sv  ch6_types.sv  ch7_aggregates.sv  ch7b_packed_scope.sv  ch7c_local_typedef.sv  ch8_classes.sv  ch9_processes.sv
tests/sv_compliance/tests_ch20_systf/: 41_severity_tasks.sv  42_severity_fatal.sv  43_stochastic_queue.sv  44_system.sv  45_real_math_trig.sv  46_stacktrace.sv  Makefile  README.md
tests/sv_compliance/tests_ch21_io/: 51_format_specs.sv  52_file_radix_output.sv  53_file_read.sv  54_memory_file.sv  55_monitor_control.sv  56_vcd_misc.sv  Makefile  README.md
